--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,10 @@
     background-color: #9b59b6
 }
 
+.bg-color-contact {
+    background-color: #fff;
+}
+
 .ui-menu-color-home {
     background-color: #e67e22;
 }
@@ -28,6 +32,14 @@
 
 .ui-menu-color-contact {
     background-color: #3498db;
+}
+
+.ui-menu-color-github {
+    background-color: #1c4a6c;
+}
+
+.ui-menu-color-interests {
+    background-color: #e74c3c;
 }
 
 .ui-menu-color-download {
@@ -70,13 +82,13 @@ h5 {
 
 .history-heading,
 .section-heading {
-    font-family: "Exo" , sans-serif;
+    font-family: "Exo", sans-serif;
     font-weight: 300;
     margin-bottom: 40px;
     margin-top: 25px;
 }
 
-/*---------------Heading---------------*/
+/*---------------Header---------------*/
 
 header {
     margin: 0;
@@ -213,7 +225,7 @@ footer {
     -o-transition: all 0.35s ease-in-out;
 }
 
-.social-links li a i:hover{
+.social-links li a i:hover {
     background-color: #e84610;
 }
 
@@ -281,7 +293,7 @@ footer {
     font-weight: 400;
     padding: 3px 30px 2px 10px;
     color: #fafafa;
-    background-color: rgba(25,25,25,0.2);
+    background-color: rgba(25, 25, 25, 0.2);
 }
 
 .progressbar-section {
@@ -334,4 +346,44 @@ footer {
 
 .history-items {
     margin-bottom: 30px;
+}
+
+/*---------------Contact Form---------------*/
+
+.contact-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 20px;
+}
+
+.center-form {
+    padding-top: 30px;
+    min-height: 240px;
+    margin: 0 auto;
+    max-width: 50%;
+}
+
+button[type="submit"] {
+    margin-top: 15px;
+    margin-bottom: 20px;
+    color: #fafafa;
+    background-color: #e84610;
+}
+
+
+/*--------------------------------------------Map*/
+div#map {
+    min-height: 360px;
+}
+
+/*---------------Media Queries---------------*/
+
+@media(min-width: 992px) {
+    .center-form {
+        padding-top: 30px;
+        min-height: 240px;
+        margin: 0 auto;
+        max-width: 50%;
+    }
 }
